--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -28,7 +28,9 @@ blockquote {
   border-left: 2px solid var(--global-theme-color);
   margin: 1.5em 10px;
   padding: 0.5em 10px;
-  font-size: 1.2rem;
+  font-size: smaller;
+  font-family: 'Academicons';
+  font-style: italic;
 }
 
 // Math
