--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,10 +34,10 @@
                 </a>
               </li>
               {% if site.blog_name %}
-              <!-- Blog -->
-              <li class="nav-item {% if page.url contains 'blog' %}active{% endif %}">
-                <a class="nav-link" href="{{ '/blog/' | relative_url }}">blog
-                  {%- if page.title == "blog" -%}
+              <!-- Research -->
+              <li class="nav-item {% if page.url contains 'research' %}active{% endif %}">
+                <a class="nav-link" href="{{ '/research/' | relative_url }}">research
+                  {%- if page.title == "research" -%}
                   <span class="sr-only">(current)</span>
                   {%- endif -%}
                 </a>
