--- a/_layouts/bib.html
+++ b/_layouts/bib.html
@@ -116,8 +116,8 @@
             <a href="{{ entry.supp | prepend: '/assets/pdf/' | relative_url }}" class="btn btn-sm z-depth-0" role="button">Supp</a>
             {%- endif %}
           {%- endif %}
-          {%- if entry.blog %}
-            <a href="{{ entry.blog }}" class="btn btn-sm z-depth-0" role="button">Blog</a>
+          {%- if entry.research %}
+            <a href="{{ entry.research }}" class="btn btn-sm z-depth-0" role="button">Research</a>
           {%- endif %}
           {%- if entry.code %}
             <a href="{{ entry.code }}" class="btn btn-sm z-depth-0" role="button">Code</a>
